Fixed editors pick on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -280,7 +280,7 @@ hr {
 }
 
 .pick-card{
-	height: 150px !important;
+	max-height: 150px;
 	background-color: var(--background);
 }
 
@@ -316,11 +316,12 @@ hr {
 	}
 
 	.pick-card{
-		max-height: 200px;
+		max-height: 100% !important;
+
 	}
 
 	.pick-img{
-		max-height: 200px;
+		max-height: 100% !important;
 		object-fit: cover;
 	}
 
