--- a/src/styles/home-style.css
+++ b/src/styles/home-style.css
@@ -76,7 +76,6 @@
 .pick-card {
   background: #ddddcc;
   flex: 1;
-  height: 100px;
   border-radius: 10px;
 }
 
